<resources>
    <string name="app_name">Just Java</string>
    <string name="plus_button">+</string>
    <string name="tv_quantity">0</string>
    <string name="decrement">-</string>
    <string name="tv_price">order summary</string>
    <string name="price">0</string>
    <string name="btn_order">Order</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="chocolate">Chocolate</string>
</resources>
